pkg/controller/appdefinition/testdata/ingress/input.yaml
kind: AppInstance
apiVersion: acorn.io/v1
metadata:
  uid: "1234567890abc"
  name: app-name
  namespace: app-namespace
spec:
  publishAllPorts: true
  image: test
  endpoints:
  - target: oneimage
    hostname: localhost
status:
  namespace: app-created-namespace
  appSpec:
    containers:
      oneimage:
        sidecars:
          left:
            image: "foo"
            ports:
              - port: 90
                containerPort: 91
                protocol: https
                publish: true
        ports:
        - port: 80
          containerPort: 81
          publish: true
          protocol: http
        image: "image-name"
        build:
          dockerfile: "Dockerfile"
          context: "."
      buildimage:
        ports:
          - port: 80
            containerPort: 81
            publish: true
            protocol: http
          - port: 443
            containerPort: 91
            publish: true
            protocol: https
        image: "sha256:build-image"
        build:
          dockerfile: "custom-dockerfile"
          context: "."
