pkg/controller/appdefinition/testdata/ingress/expected.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/managed": "true"
    pod-security.kubernetes.io/enforce: baseline

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    "herd-project.io/managed": "true"
spec:
  selector:
    matchLabels:
      "herd-project.io/app-namespace": "app-namespace"
      "herd-project.io/app-name": "app-name"
      "herd-project.io/container-name": "oneimage"
      "herd-project.io/managed": "true"
  template:
    metadata:
      labels:
        "herd-project.io/app-namespace": "app-namespace"
        "herd-project.io/app-name": "app-name"
        "herd-project.io/container-name": "oneimage"
        "herd-project.io/managed": "true"
      annotations:
        herd-project.io/container-spec: '{"build":{"context":".","dockerfile":"Dockerfile"},"image":"image-name","ports":[{"containerPort":81,"port":80,"protocol":"http","publish":true}],"sidecars":{"left":{"image":"foo","ports":[{"containerPort":91,"port":90,"protocol":"https","publish":true}]}}}'
    spec:
      enableServiceLinks: false
      shareProcessNamespace: true
      automountServiceAccountToken: false
      containers:
        - name: oneimage
          image: "index.docker.io/library/test@image-name"
          ports:
          - containerPort: 81
            protocol: "TCP"
        - name: left
          image: "index.docker.io/library/test@foo"
          ports:
          - containerPort: 91
            protocol: "TCP"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: buildimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    "herd-project.io/managed": "true"
spec:
  selector:
    matchLabels:
      "herd-project.io/app-namespace": "app-namespace"
      "herd-project.io/app-name": "app-name"
      "herd-project.io/container-name": "buildimage"
      "herd-project.io/managed": "true"
  template:
    metadata:
      labels:
        "herd-project.io/app-namespace": "app-namespace"
        "herd-project.io/app-name": "app-name"
        "herd-project.io/container-name": "buildimage"
        "herd-project.io/managed": "true"
      annotations:
        herd-project.io/container-spec: '{"build":{"context":".","dockerfile":"custom-dockerfile"},"image":"sha256:build-image","ports":[{"containerPort":81,"port":80,"protocol":"http","publish":true},{"containerPort":91,"port":443,"protocol":"https","publish":true}]}'
    spec:
      enableServiceLinks: false
      shareProcessNamespace: true
      automountServiceAccountToken: false
      containers:
        - name: buildimage
          image: "index.docker.io/library/test@sha256:build-image"
          ports:
            - containerPort: 81
              protocol: "TCP"
            - containerPort: 91
              protocol: "TCP"
---
kind: Service
apiVersion: v1
metadata:
  name: oneimage-publish-1234567890ab
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    "herd-project.io/managed": "true"
spec:
  type: LoadBalancer
  ports:
    - port: 90
      targetPort: 91
      protocol: "TCP"
      appProtocol: "HTTPS"
  selector:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    herd-project.io/managed: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    "herd-project.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
    - port: 90
      targetPort: 91
      protocol: "TCP"
      appProtocol: "HTTPS"
  selector:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    herd-project.io/managed: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: buildimage-publish-1234567890ab
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    "herd-project.io/managed": "true"
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 91
      protocol: "TCP"
      appProtocol: "HTTPS"
  selector:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    herd-project.io/managed: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: buildimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    "herd-project.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
    - port: 443
      targetPort: 91
      protocol: "TCP"
      appProtocol: "HTTPS"
  selector:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    herd-project.io/managed: "true"
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "oneimage"
    "herd-project.io/managed": "true"
  annotations:
    herd-project.io/container-name: oneimage
    herd-project.io/hostnames: localhost
    herd-project.io/port-number: "81"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oneimage.app-name.app-namespace.localhost
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: buildimage
  namespace: app-created-namespace
  labels:
    "herd-project.io/app-namespace": "app-namespace"
    "herd-project.io/app-name": "app-name"
    "herd-project.io/container-name": "buildimage"
    "herd-project.io/managed": "true"
  annotations:
    herd-project.io/container-name: buildimage
    herd-project.io/hostnames: buildimage.app-name.app-namespace.localhost
    herd-project.io/port-number: "81"
spec:
  rules:
    - host: buildimage.app-name.app-namespace.localhost
      http:
        paths:
          - backend:
              service:
                name: buildimage
                port:
                  number: 80
            path: /
            pathType: Prefix
---
kind: AppInstance
apiVersion: herd-project.io/v1
metadata:
  uid: "1234567890abc"
  name: app-name
  namespace: app-namespace
spec:
  image: test
  endpoints:
    - target: oneimage
      hostname: localhost
status:
  namespace: app-created-namespace
  appSpec:
    containers:
      oneimage:
        sidecars:
          left:
            image: "foo"
            ports:
              - port: 90
                containerPort: 91
                protocol: https
                publish: true
        ports:
          - port: 80
            containerPort: 81
            publish: true
            protocol: http
        image: "image-name"
        build:
          dockerfile: "Dockerfile"
          context: "."
      buildimage:
        ports:
          - port: 80
            containerPort: 81
            publish: true
            protocol: http
          - port: 443
            containerPort: 91
            publish: true
            protocol: https
        image: "sha256:build-image"
        build:
          dockerfile: "custom-dockerfile"
          context: "."
  conditions:
    defined:
      success: true
